--- a/.rustfmt.toml
+++ b/.rustfmt.toml
@@ -1,13 +1,8 @@
+edition = "2024"                  # Keep in sync with Cargo.toml.
+force_explicit_abi = false
+match_block_trailing_comma = true
 max_width = 100
-hard_tabs = true
 newline_style = "Unix"
-use_small_heuristics = "Default"
-reorder_imports = true
-reorder_modules = true
-remove_nested_parens = true
-edition = "2024"
-merge_derives = true
-use_try_shorthand = false
-use_field_init_shorthand = false
-force_explicit_abi = true
+use_field_init_shorthand = true
+use_try_shorthand = true
 # ignore = ["tests-paths"]
