--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,4 @@
 [workspace]
-resolver = "3"
 members = [
   "crates/crate-paths",
   "crates/crate-paths-cli",
@@ -11,8 +10,10 @@ members = [
   "tests-paths/std-crate-paths",
   "tests-paths/tonic-crate-paths",
 ]
+resolver = "3"
 
 [workspace.package]
+categories = [ "development-tools::procedural-macro-helpers" ]
 edition = "2024"
 license = "MIT"
 
@@ -37,3 +38,11 @@ strum = "0.27.1"
 syn = "2.0.98"
 thiserror = "2.0.12"
 zstd = "0.13.3"
+
+[workspace.lints.rust]
+unexpected_cfgs = { level = "allow" }
+
+[workspace.lints.clippy]
+dbg_macro = "deny"
+todo = "deny"
+unused_trait_names = "deny"
