--- a/crates/crate-paths-macro/Cargo.toml
+++ b/crates/crate-paths-macro/Cargo.toml
@@ -3,6 +3,8 @@ name = "crate-paths-macro"
 version = "0.1.0"
 edition.workspace = true
 license.workspace = true
+categories.workspace = true
+keywords = [ "syn", "path" ]
 
 [lib]
 proc-macro = true
@@ -11,7 +13,10 @@ proc-macro = true
 check_keyword = { workspace = true }
 proc-macro2 = { workspace = true }
 quote = { workspace = true }
-syn = { workspace = true, features = ["full"] }
+syn = { features = [ "full" ], workspace = true }
 
 [dev-dependencies]
 crate-paths = { workspace = true }
+
+[lints]
+workspace = true
