--- a/crates/crate-paths/Cargo.toml
+++ b/crates/crate-paths/Cargo.toml
@@ -3,14 +3,19 @@ name = "crate-paths"
 version = "0.1.0"
 edition.workspace = true
 license.workspace = true
+categories.workspace = true
+keywords = [ "syn", "path" ]
 
 [features]
-default = []
-macro = ["dep:crate-paths-macro"]
+default = [  ]
+macro = [ "dep:crate-paths-macro" ]
 
 [dependencies]
-crate-paths-macro = { workspace = true, optional = true }
-derive_more = { workspace = true, features = ["display"] }
+crate-paths-macro = { optional = true, workspace = true }
+derive_more = { features = [ "display" ], workspace = true }
 proc-macro2 = { workspace = true }
 quote = { workspace = true }
 syn = { workspace = true }
+
+[lints]
+workspace = true
