--- a/crates/crate-paths-macros/Cargo.toml
+++ b/crates/crate-paths-macros/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "crate-paths-macro"
+name = "crate-paths-macros"
 version = "0.1.0"
 edition.workspace = true
 license.workspace = true
