--- a/crates/dummy-consumer-lib/Cargo.toml
+++ b/crates/dummy-consumer-lib/Cargo.toml
@@ -3,6 +3,7 @@ name = "dummy-consumer-lib"
 version = "0.1.0"
 edition.workspace = true
 license.workspace = true
+publish = false
 
 [dependencies]
 gpui = { git = "https://github.com/zed-industries/zed.git", rev = "06a199da4d8a147c7867f4c82ffafed4974bea24" }
