--- a/tests-paths/tonic-crate-paths/Cargo.toml
+++ b/tests-paths/tonic-crate-paths/Cargo.toml
@@ -3,6 +3,7 @@ name = "tonic-crate-paths"
 version = "0.1.0"
 edition.workspace = true
 license.workspace = true
+publish = false
 
 [dependencies]
 crate-paths.workspace = true
