use correct `macros` feature

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,7 +41,7 @@ thiserror = "2.0.12"
 zstd = "0.13.3"
 
 [workspace.lints.rust]
-unexpected_cfgs = { level = "allow" }
+unexpected_cfgs = { level = "deny" }
 
 [workspace.lints.clippy]
 dbg_macro = "deny"
