--- a/crates/dummy-consumer-lib/Cargo.toml
+++ b/crates/dummy-consumer-lib/Cargo.toml
@@ -2,7 +2,7 @@
 name = "dummy-consumer-lib"
 version = "0.1.0"
 edition.workspace = true
-license.workspace = true
+license = "Unlicense"
 publish = false
 
 [dependencies]
