--- a/tests-paths/tonic-crate-paths/Cargo.toml
+++ b/tests-paths/tonic-crate-paths/Cargo.toml
@@ -2,7 +2,7 @@
 name = "tonic-crate-paths"
 version = "0.1.0"
 edition.workspace = true
-license.workspace = true
+license = "Unlicense"
 publish = false
 
 [dependencies]
