--- a/tests-paths/gpui-component-crate-paths/Cargo.toml
+++ b/tests-paths/gpui-component-crate-paths/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "gpui-crate-paths"
+name = "gpui-component-crate-paths"
 version = "0.1.0"
+categories.workspace = true
 edition.workspace = true
 license = "Unlicense"
-publish = false
 
 [dependencies]
 crate-paths.workspace = true
