--- a/crates/crate-paths-cli-core/Cargo.toml
+++ b/crates/crate-paths-cli-core/Cargo.toml
@@ -1,8 +1,12 @@
 [package]
 name = "crate-paths-cli-core"
+description = """
+    Core library for crate-paths-cli
+"""
 version = "0.1.0"
 edition.workspace = true
 license.workspace = true
+repository.workspace = true
 
 [dependencies]
 Inflector = { workspace = true }
