--- a/crates/crate-paths-macros/Cargo.toml
+++ b/crates/crate-paths-macros/Cargo.toml
@@ -1,9 +1,14 @@
 [package]
 name = "crate-paths-macros"
+description = """
+    Optional macros library for crate-paths
+"""
+readme = "README.md"
 version = "0.1.0"
 edition.workspace = true
 license.workspace = true
 categories.workspace = true
+repository.workspace = true
 keywords = [ "syn", "path" ]
 
 [lib]
