--- a/crates/crate-paths/Cargo.toml
+++ b/crates/crate-paths/Cargo.toml
@@ -1,8 +1,13 @@
 [package]
 name = "crate-paths"
+description = """
+    Required library for crate-paths-cli's output
+"""
+readme = "README.md"
 version = "0.1.0"
 edition.workspace = true
 license.workspace = true
+repository.workspace = true
 categories.workspace = true
 keywords = [ "syn", "path" ]
 
