--- a/release-plz.toml
+++ b/release-plz.toml
@@ -1,12 +1,4 @@
 [workspace]
+changelog_path = "./CHANGELOG.md"
 changelog_update = true
-
-[[package]]
-changelog_include = [ "crate-paths-cli-core" ]
-changelog_update = true
-name = "crate-paths-cli"
-
-[[package]]
-changelog_include = [ "crate-paths-macros" ]
-changelog_update = true
-name = "crate-paths"
+semver_check = false
