--- a/tests-paths/gpui-component-crate-paths/Cargo.toml
+++ b/tests-paths/gpui-component-crate-paths/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 categories.workspace = true
 edition.workspace = true
 license = "Unlicense"
+publish = false
 
 [dependencies]
 crate-paths.workspace = true
