--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,12 +5,12 @@ members = [
   "crates/crate-paths-cli",
   "crates/crate-paths-cli-core",
   "crates/crate-paths-macros",
-  "crates/dummy-consumer-lib",
-  "tests-paths/gpui-component-crate-paths",
-  "tests-paths/gpui-crate-paths",
-  "tests-paths/serde-crate-paths",
-  "tests-paths/std-crate-paths",
-  "tests-paths/tonic-crate-paths",
+  "crates/dummy-consumer-lib", "example",
+  "tests/gpui-component-crate-paths",
+  "tests/gpui-crate-paths",
+  "tests/serde-crate-paths",
+  "tests/std-crate-paths",
+  "tests/tonic-crate-paths",
 ]
 resolver = "3"
 
