--- a/crates/crate-paths-cli/Cargo.toml
+++ b/crates/crate-paths-cli/Cargo.toml
@@ -4,7 +4,8 @@ description = """
     Cli that builds a tree of a crate's item paths
 """
 readme = "README.md"
-version = "0.1.0"
+version.workspace = true
+publish.workspace = true
 edition.workspace = true
 license.workspace = true
 repository.workspace = true
