--- a/crates/crate-paths/Cargo.toml
+++ b/crates/crate-paths/Cargo.toml
@@ -4,7 +4,8 @@ description = """
     Required library for crate-paths-cli's output
 """
 readme = "README.md"
-version = "0.1.0"
+version.workspace = true
+publish.workspace = true
 edition.workspace = true
 license.workspace = true
 repository.workspace = true
@@ -21,6 +22,9 @@ derive_more = { features = [ "display" ], workspace = true }
 proc-macro2 = { workspace = true }
 quote = { workspace = true }
 syn = { workspace = true }
+
+[dev-dependencies]
+crate-paths-macros = { workspace = true }
 
 [lints]
 workspace = true
