--- a/crates/crate-paths-cli-core/Cargo.toml
+++ b/crates/crate-paths-cli-core/Cargo.toml
@@ -3,7 +3,8 @@ name = "crate-paths-cli-core"
 description = """
     Core library for crate-paths-cli
 """
-version = "0.1.0"
+version.workspace = true
+publish.workspace = true
 edition.workspace = true
 license.workspace = true
 repository.workspace = true
