--- a/crates/crate-paths-macros/Cargo.toml
+++ b/crates/crate-paths-macros/Cargo.toml
@@ -4,7 +4,8 @@ description = """
     Optional macros library for crate-paths
 """
 readme = "README.md"
-version = "0.1.0"
+version.workspace = true
+publish.workspace = true
 edition.workspace = true
 license.workspace = true
 categories.workspace = true
@@ -19,9 +20,6 @@ check_keyword = { workspace = true }
 proc-macro2 = { workspace = true }
 quote = { workspace = true }
 syn = { features = [ "full" ], workspace = true }
-
-[dev-dependencies]
-crate-paths = { workspace = true }
 
 [lints]
 workspace = true
