--- a/tests/gpui-component-crate-paths/Cargo.toml
+++ b/tests/gpui-component-crate-paths/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "gpui-component-crate-paths"
-version = "0.1.0"
+version.workspace = true
 categories.workspace = true
 edition.workspace = true
 license = "Unlicense"
