--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,4 +53,5 @@ unexpected_cfgs = { level = "deny" }
 [workspace.lints.clippy]
 dbg_macro = "deny"
 todo = "deny"
+uninlined_format_args = "allow"
 unused_trait_names = "warn"
