--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,8 +18,7 @@ resolver = "3"
 [workspace.package]
 categories = [ "development-tools::procedural-macro-helpers" ]
 edition = "2024"
-exclude = [ ".github" ]
-license = "MIT"
+license = "MIT OR Apache-2.0"
 publish = true
 readme = "README.md"
 repository = "https://github.com/stayhydated/crate-paths"
