--- a/crates/dummy-consumer-lib/Cargo.toml
+++ b/crates/dummy-consumer-lib/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "dummy-consumer-lib"
-version.workspace = true
+version = "0.1.0"
 edition.workspace = true
 license = "Unlicense"
 publish = false
 
 [dependencies]
-gpui = { git = "https://github.com/zed-industries/zed.git", rev = "06a199da4d8a147c7867f4c82ffafed4974bea24" }
+gpui = { git = "https://github.com/zed-industries/zed.git" }
 gpui-component = { git = "https://github.com/longbridge/gpui-component.git" }
