--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "example"
-version.workspace = true
+version = "0.1.0"
 categories.workspace = true
 edition.workspace = true
 publish = false
