--- a/tests/gpui-component-crate-paths/Cargo.toml
+++ b/tests/gpui-component-crate-paths/Cargo.toml
@@ -1,7 +1,6 @@
 [package]
 name = "gpui-component-crate-paths"
-version.workspace = true
-categories.workspace = true
+version = "0.1.0"
 edition.workspace = true
 license = "Unlicense"
 publish = false
