--- a/tests/std-crate-paths/Cargo.toml
+++ b/tests/std-crate-paths/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "std-crate-paths"
-version.workspace = true
+version = "0.1.0"
 edition.workspace = true
 license = "Unlicense"
 publish = false
