--- a/crates/crate-paths-cli-core/Cargo.toml
+++ b/crates/crate-paths-cli-core/Cargo.toml
@@ -23,5 +23,8 @@ strum = { features = [ "derive" ], workspace = true }
 thiserror = { workspace = true }
 zstd = { workspace = true }
 
+[dev-dependencies]
+insta = { workspace = true }
+
 [lints]
 workspace = true
