--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,6 @@ rust-version = "1.91"
 version = "0.1.3"
 
 [workspace.dependencies]
-Inflector = "0.11.4"
 check_keyword = "0.4.1"
 clap = "4.5.39"
 crate-paths = { path = "crates/crate-paths", version = "0.1.3" }
@@ -27,6 +26,7 @@ crate-paths-cli-core = { path = "crates/crate-paths-cli-core", version = "0.1.3"
 crate-paths-macros = { path = "crates/crate-paths-macros", version = "0.1.3" }
 derive_more = "2.0.1"
 getset = "0.1.5"
+heck = "0.5.0"
 insta = "1.42.2"
 prettyplease = "0.2.33"
 proc-macro2 = "1.0.93"
