--- a/crates/crate-paths-cli/Cargo.toml
+++ b/crates/crate-paths-cli/Cargo.toml
@@ -11,6 +11,10 @@ license.workspace = true
 repository.workspace = true
 categories.workspace = true
 
+[[bin]]
+name = "cargo-crate-paths"
+path = "src/main.rs"
+
 [dependencies]
 clap = { features = [ "derive" ], workspace = true }
 crate-paths-cli-core = { workspace = true }
