--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,9 +25,6 @@ jobs:
       - name: Setup mold
         uses: rui314/setup-mold@v1
 
-      - name: Install Linux dependencies
-        uses: ./.github/actions/install-linux-deps
-
       - name: Run tests
         run: cargo test --workspace --all-features
 
@@ -60,11 +57,8 @@ jobs:
       - name: Setup mold
         uses: rui314/setup-mold@v1
 
-      - name: Install Linux dependencies
-        uses: ./.github/actions/install-linux-deps
-
       - name: Lint code
-        run: cargo clippy --workspace --all-features
+        run: cargo clippy --workspace --all-features --exclude cosmic-example -- -D warnings
 
   # release-plz-release:
   #   name: Release-plz release
