--- a/crates/crate-paths-cli/Cargo.toml
+++ b/crates/crate-paths-cli/Cargo.toml
@@ -17,6 +17,7 @@ path = "src/main.rs"
 [dependencies]
 clap = { features = [ "derive" ], workspace = true }
 crate-paths-cli-core = { workspace = true }
+heck = { workspace = true }
 prettyplease = { workspace = true }
 syn = { workspace = true }
 thiserror = { workspace = true }
