--- a/crates/crate-paths-cli/Cargo.toml
+++ b/crates/crate-paths-cli/Cargo.toml
@@ -4,11 +4,12 @@ description = """
     Cli that builds a tree of a crate's item paths
 """
 readme = "README.md"
-version.workspace = true
 edition.workspace = true
 license.workspace = true
 publish.workspace = true
 repository.workspace = true
+rust-version.workspace = true
+version.workspace = true
 
 [[bin]]
 name = "cargo-crate-paths"
