--- a/crates/crate-paths-macros/Cargo.toml
+++ b/crates/crate-paths-macros/Cargo.toml
@@ -4,11 +4,12 @@ description = """
     Optional macros library for crate-paths
 """
 readme = "README.md"
-version.workspace = true
 edition.workspace = true
 license.workspace = true
 publish.workspace = true
 repository.workspace = true
+rust-version.workspace = true
+version.workspace = true
 
 [lib]
 proc-macro = true
